[package]
    name = 'install_checker'
    version = '0.1.0'
    edition = '2021'
    authors = [ 'ENDERZOMBI102 <enderzombi102.end@gmail.com>' ]

[dependencies]
    csv = '1.2.2'
    clap = { version = '4.3.19', features = [ 'env' ] }
    serde = { version = '1.0.188', features = [ 'rc' ] }
    serde_derive = '1.0.188'
    crc32fast = '1.3.2'
    sha2 = '0.10.7'
    glob = '0.3.1'